--- a/static/index.html
+++ b/static/index.html
@@ -1,1 +1,20 @@
-<h1>Hello</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Actix-Todo</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.10.2/umd/react.production.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.10.2/umd/react-dom.production.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/rsuite/4.1.1/rsuite.js"></script>
+    <script src="https://cdn.bootcss.com/babel-core/5.8.38/browser.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/rsuite/4.1.1/styles/rsuite-default.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/axios/0.19.0/axios.min.js"></script>
+  </head>
+
+  <body id="app">
+    <script src="/static/script.js" type="text/babel"></script>
+  </body>
